--- a/table-reservation-client/src/components/Sidebar/Sidebar.css
+++ b/table-reservation-client/src/components/Sidebar/Sidebar.css
@@ -11,6 +11,7 @@
     padding-left: 20%;
     display: flex;
     flex-direction: column;
+    /* justify-content: center; */
     gap: 20px;
 }
 
@@ -20,11 +21,15 @@
     gap: 12px;
     border: 1px solid #a9a9a9;
     border-right: 0;
-    padding: 8px 10px;
+    padding: 15px 10px;
     border-radius: 3px 0px 0px 3px;
     cursor: pointer;
     text-decoration: none;
     color: black;
+
+}
+.sidebar-option p {
+    margin-bottom: 0;
 }
 
 .sidebar-option.active{
