--- a/table-reservation-client/src/components/UserPanel/UserPanel.css
+++ b/table-reservation-client/src/components/UserPanel/UserPanel.css
@@ -17,6 +17,24 @@
   max-width: 30%;
   padding: 0 1rem; /* Add padding for better spacing on smaller screens */
 }
+/* Add these classes to your CSS file */
+.fade-in {
+  opacity: 1;
+  transition: opacity 0.7s ease-in;
+}
+
+.fade-out {
+  opacity: 0.5;
+  transition: opacity 0.7s ease-out;
+}
+
+.hero-image1, .hero-image2 {
+  width: 300px;
+  height: auto;
+  border-radius: 20px;
+  object-fit: cover;
+  position: relative;
+}
 
 .subheading {
   color: #ff4135;
